--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
   - docker build -t jawadcogilent/multi-server ./server
   - docker build -t jawadcogilent/multi-worker ./worker
   # Log in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push it to docker hub
   - docker push jawadcogilent/multi-client
   - docker push jawadcogilent/multi-nginx
