--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,17 @@ after_success:
   - docker push jawadcogilent/multi-nginx
   - docker push jawadcogilent/multi-server
   - docker push jawadcogilent/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-west-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-west-1-635942860569
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secure_access_key:
+    secure: $AWS_SECRET_KEY
