--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ deploy:
     branch: master
   access_key_id:
     secure: $AWS_ACCESS_KEY
-  secure_access_key:
+  secret_access_key:
     secure: $AWS_SECRET_KEY
